<resources>
    <string name="app_name">ConfuZaa</string>
    <string name="log_in">Log in</string>
    <string name="mail_Id">User Mail Id</string>
    <string name="password">Password</string>
    <string name="Sign_In">Sign In As New User</string>
    <string name="ConfuZaa">ConfuZaa</string>
    <string name="or">or</string>
    <string name="submit">Submit</string>
    <string name="enter_otp_sent_to_your_mail_id">ENTER OTP sent to your mail id</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="go">GO</string>
    <string name="confuzaa">ConfuZaa</string>
    <string name="discrip">Get Relief From Confusio With</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="dateText">- Date</string>
    <string name="timeText">- Time</string>
    <string name="select">-select-</string>
    <string name="programme">- Programme</string>
    <string name="student">Student</string>
    <string name="organiser">Organiser</string>
    <string name="add_event">Add Event</string>
    <string name="team">- Team</string>
    <string name="remember_me">Remember Me</string>
</resources>
