<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    >

    <View
        android:id="@+id/divider2"
        android:layout_width="174dp"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        app:layout_constraintBottom_toTopOf="@+id/SignIn"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/LogIn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/round_bg"
        android:text="@string/log_in"
        android:textColor="#2C2C2C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_bg"
        android:onClick="signIn"
        android:text="@string/Sign_In"
        android:textColor="#2C2C2C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn"
        app:layout_constraintVertical_bias="0.716" />

    <EditText
        android:id="@+id/MailId_main"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/round_bound"
        android:drawableStart="@drawable/ic_baseline_mail_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/mail_Id"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/LogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Password_main"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/round_bound"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/LogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MailId_main"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/SignIn"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/LogIn" />

    <View
        android:id="@+id/divider"
        android:layout_width="176dp"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        app:layout_constraintBottom_toTopOf="@+id/SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/LogIn"
        app:layout_constraintVertical_bias="0.502" />

    <View
        android:id="@+id/topview"
        android:layout_width="421dp"
        android:layout_height="99dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/wave"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topview" />

    <TextView
        android:id="@+id/ConfuZaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:fontFamily="cursive"
        android:text="@string/confuzaa"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36sp"
        android:fontFamily="cursive"
        android:text="@string/discrip"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discrip"
        app:srcCompat="@drawable/ic_arrow"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="281dp"
        android:layout_marginEnd="40dp"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toTopOf="@+id/LogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_main" />

</androidx.constraintlayout.widget.ConstraintLayout>